--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style_login.css">
+  <link rel="stylesheet" href="./assets/css/style_login.css">
  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
  -->
-  <title>login the user</title>
+  <title>login</title>
 </head>
 <body>
 <header>
   <nav>
-    <img src="./icons/icon_menu.svg" alt="menu" class="menu">
+    <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu">
 
     <div class="navbar-left">
-      <img src="./recursos/logo_sisviansa.png" alt="logo" class="logo">
+      <img src="./assets/recursos/logo_sisviansa.png" alt="logo" class="logo">
 
       <ul>
         <li></li>
@@ -42,7 +42,7 @@
       <ul>
         <li class="navbar-email">sisviansa@gmail.com</li>
         <li class="navbar-shopping-cart">
-          <img src="./icons/icon_shopping_cart.svg" alt="shopping cart">
+          <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart">
           <div>2</div>
         </li>
       </ul>
