--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -22,21 +22,21 @@
               <li></li>
               <li>
                 <a href="/">Inicio</a>
-              </li>
+              </li>&nbsp;
               <li>
                 <a href="/">Dieta</a>
-              </li>
+              </li>&nbsp;
               <li>
                 <a href="/">Viandas</a>
-              </li>
+              </li>&nbsp;
               <li>
                 <a href="/">Nuevo</a>
-              </li>
+              </li>&nbsp;
               <li>
                 <a href="/">Nosotros</a>
               </li>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              
               <!--login-->
               <li><input class="control" type="email" name="usuario" id="usuario" placeholder="abc@example.com"></li>&nbsp;
                 <li><input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******"></li>&nbsp;
@@ -57,7 +57,7 @@
         </div>
         <div>
         </div>
-        
+
         <!--boostrap carrusel-->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
          <div class="carousel-indicators">
