--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -110,7 +110,7 @@
             <br />
             <label for="apellido">Apellido</label>
             <br />
-            <input type="text" id="apellido" maxlength="18 value="" />
+            <input type="text" id="apellido" maxlength="18" value="" />
             <br />
             <label>Documento</label>
             <br />
