creacion de dietas.html viandas.html nosotros.htm ect

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -73,7 +73,7 @@
 
       <section>
         <h2>Formulario de registro</h2>
-        <form action="../logica/insertar.php" method="post">
+        <form action="../logica/controladorCliente.php" method="post">
           <fieldset>
             <input
               type="radio"
