--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/style_login.css">
+  <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png"/>
  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
@@ -22,19 +23,19 @@
       <ul>
         <li></li>
         <li>
-          <a href="/">Inicio</a>
+          <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="/">Dieta</a>
+          <a href="dietas.html">Dieta</a>
         </li>
         <li>
-          <a href="/">Viandas</a>
+          <a href="viandas.html">Viandas</a>
         </li>
         <li>
-          <a href="/">Nuevo</a>
+          <a href="nuevo.html">Nuevo</a>
         </li>
         <li>
-          <a href="/">Nosotros</a>
+          <a href="nosotros.html">Nosotros</a>
         </li>
       </ul>
     </div>
