--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -48,7 +48,7 @@
             </li>
             &nbsp;
             <li>
-              <a href="/">Nuevo</a>
+              <a href="nuevo">Nuevo</a>
             </li>
             &nbsp;
             <li>
