--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -31,7 +31,7 @@
                 <a href="viandas.html">Viandas</a>
               </li>&nbsp;
               <li>
-                <a href="/">Nuevo</a>
+                <a href="nuevo.html">Nuevo</a>
               </li>&nbsp;
               <li>
                 <a href="nosotros.html">Nosotros</a>
