--- a/presentacion/nuevo.html
+++ b/presentacion/nuevo.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style_dietas.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png"/>
-    <title>Sobre Nosotros</title>
+
+    <title>Nuevo</title>
 </head>
 <body>
+    
     <header>
         <nav>
           <img src="./assets/icons/icon_menu.svg" alt="menu" class="menu">
@@ -49,13 +53,16 @@
         </nav>
         <br>
     </header>
-    
-    <section>
- 
-        <fieldset>
 
-         </fieldset>
 
-    </section>
+    <section class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium ipsum recusandae sunt, corrupti, perspiciatis commodi quo quasi ducimus magni sit doloremque? Nulla ab ut eveniet velit, optio laborum vel. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores velit, at, reprehenderit voluptate vitae laborum, odit tempora ipsum ab quas excepturi aperiam dolorem molestiae quidem doloremque possimus earum. Adipisci, cum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam laborum distinctio ratione deleniti quia quas obcaecati eos corrupti vero quos! Sed, numquam suscipit assumenda veniam libero reprehenderit eligendi voluptas architecto?</section>
+
+    <footer>
+      <b>Empresa de alimentos SISVIANSA sisviansa@gmail.com 093301602.</b>
+      <img src="./assets/recursos/isotipo.png" height="55px" width="55">
+      <b>Pagina web creada por Rubber Ahiru &copy;<br>
+      Todos los derechos reservados </b>
+    </footer>
+
 </body>
 </html>
