--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -27,7 +27,7 @@
                 <a href="viandas.html">Viandas</a>
               </li>&nbsp;
               <li>
-                <a href="/">Nuevo</a>
+                <a href="nuevo.html">Nuevo</a>
               </li>&nbsp;
               <li>
                 <a href="nosotros.html">Nosotros</a>
