--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -67,177 +67,178 @@
 
       <section>
         <h2>Formulario de registro</h2>
+        <form action="../logica/insertar.php" method="post">
+          <fieldset>
+            <input
+              type="radio"
+              name="TipoFormulario"
+              id="formPersona"
+              class="form-check-input"
+            />
+            <label for="TipoFormulario">Cliente</label>
+            <input type="radio" name="TipoFormulario" id="formEmpresa" />
+            <label for="TipoFormulario">Empresa</label>
+          </fieldset>
 
-        <fieldset>
-          <input
-            type="radio"
-            name="TipoFormulario"
-            id="formCliente"
-            class="form-check-input"
-          />
-          <label for="TipoFormulario">Cliente</label>
-          <input type="radio" name="TipoFormulario" id="formEmpresa" />
-          <label for="TipoFormulario">Empresa</label>
-        </fieldset>
-        <form method="get" action="action.php"></form>
-        <fieldset>
-          <legend>Cliente</legend>
-          <form name="datos personales">
-            <label for="tel">Telefono</label>
-            <br />
-            <input type="tel" id="tel" minlength="8" maxlength="9" value="" />
-            <br />
-            <label for="gmail">Correo Electronico</label>
-            <br />
-            <input type="email" id="gmail" pattern="" value="" />
-            <br />
-            <label>Dirección</label><br />
-            <input
-              type="text"
-              id="barrio"
-              min="1"
-              max="30"
-              value=""
-              placeholder="barrio"
-            /><br />
-            <input
-              type="text"
-              id="calle"
-              value=""
-              min="1"
-              max="30"
-              placeholder="calle"
-            /><br />
-            <input type="text" id="num" value="" placeholder="número" />
-          </form>
-        </fieldset>
-        <br />
-        <fieldset>
-          <legend>Persona</legend>
-          <form name="documento">
-            <label for="nombre">Nombre</label>
-            <br />
-            <input type="text" maxlength="18" id="nombre" value="" />
-            <br />
-            <label for="apellido">Apellido</label>
-            <br />
-            <input type="text" id="apellido" maxlength="18" value="" />
-            <br />
-            <label>Documento</label>
-            <br />
-            <select id="documento" name="doc_tipo">
-              <option value="ci" id="ci" selected="selected">CI</option>
-              <option value="dni" id="dni">DNI</option>
-              <option value="pasaporte" id="pasaporte">Pasaporte</option>
+          <fieldset>
+            <legend>Cliente</legend>
+            <div name="datos personales">
+              <label for="tel">Telefono</label>
+              <br />
+              <input type="tel" id="tel" minlength="8" maxlength="9" value="" />
+              <br />
+              <label for="gmail">Correo Electronico</label>
+              <br />
+              <input type="email" id="gmail" pattern="" value="" />
+              <br />
+              <label>Dirección</label><br />
               <input
                 type="text"
-                id="InputCi"
-                name="ci"
+                id="barrio"
+                min="1"
+                max="30"
                 value=""
-                placeholder="Introduce tu cedula"
-              />
+                placeholder="barrio"
+              /><br />
               <input
                 type="text"
-                id="InputDni"
-                name="dni"
+                id="calle"
                 value=""
-                placeholder="Introduce tu DNI"
-              />
+                min="1"
+                max="30"
+                placeholder="calle"
+              /><br />
+              <input type="text" id="num" value="" placeholder="número" />
+            </div>
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>Persona</legend>
+            <div id="bloquePersona">
+              <label for="nombre">Nombre</label>
+              <br />
+              <input type="text" maxlength="18" id="nombre" value="" />
+              <br />
+              <label for="apellido">Apellido</label>
+              <br />
+              <input type="text" id="apellido" maxlength="18" value="" />
+              <br />
+              <label>Documento</label>
+              <br />
+              <select id="documento" name="doc_tipo">
+                <option value="ci" id="ci" selected="selected">CI</option>
+                <option value="dni" id="dni">DNI</option>
+                <option value="pasaporte" id="pasaporte">Pasaporte</option>
+                <input
+                  type="text"
+                  id="InputCi"
+                  name="ci"
+                  value=""
+                  placeholder="Introduce tu cedula"
+                />
+                <input
+                  type="text"
+                  id="InputDni"
+                  name="dni"
+                  value=""
+                  placeholder="Introduce tu DNI"
+                />
+                <input
+                  type="text"
+                  id="InputPasaporte"
+                  name="pasaporte"
+                  value=""
+                  placeholder="Introduce tu Pasaporte"
+                />
+              </select>
+            </div>
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>Empresa</legend>
+            <div id="bloqueEmpresa">
+              <label>Razon Social</label>
+              <br />
               <input
-                type="text"
-                id="InputPasaporte"
-                name="pasaporte"
+                type="razon_social"
+                minlength="1"
+                maxlength="18"
+                name="razon_social"
+                id="razon_social"
                 value=""
-                placeholder="Introduce tu Pasaporte"
               />
-            </select>
-          </form>
-        </fieldset>
-        <br />
-        <fieldset>
-          <legend>Empresa</legend>
-          <form name="razon_social">
-            <label>Razon Social</label>
-            <br />
-            <input
-              type="razon_social"
-              minlength="1"
-              maxlength="18"
-              name="razon_social"
-              id="razon_social"
-              value=""
-            />
-            <br />
-            <label for="rut">Rut</label>
-            <br />
-            <input
-              type="number"
-              minlength="12"
-              maxlength="12"
-              name="rut"
-              id="rut"
-              value=""
-            />
-          </form>
-        </fieldset>
-        <br />
-        <fieldset>
-          <legend>INICIAR SESIÓN</legend>
-          <form name="iniciarSesion">
-            <label for="contraseña">Contraseña</label>
-            <br />
-            <input
-              type="password"
-              minlength="8"
-              maxlength="12"
-              id="contraseña"
-              value=""
-            />
-            <br />
-            <label for="contraseña2">Vuelva a escribir la contraseña</label>
-            <br />
-            <input
-              type="password"
-              id="contraseña2"
-              minlength="8"
-              maxlength="12"
-              value=""
-            />
-          </form>
-        </fieldset>
-        <br />
-        <fieldset>
-          <legend>CONDICIONES DE REGISTRO</legend>
-          <form name="condicionesRegistro">
-            <label>Deseo recibir notificaciones</label>
-            <br />
-            <input type="radio" name="opcion" id="sip" value="si" />
-            <label for="sip">Si</label>
-            <br />
-            <input type="radio" name="opcion" id="nop" value="no" />
-            <label for="nop">No</label>
-            <br />
-            <input
-              type="checkbox"
-              name="cookies"
-              id="cookies"
-              value="cookies"
-            />
-            <label for="cookies"
-              >Acepto el acuerdo de servicios, la declaracion de privacidad y la
-              declaracion de uso de cookies</label
-            >
-            <br />
-            <div>
-              <p><a href="login.html">¿Ya tienes cuenta?</a></p>
+              <br />
+              <label for="rut">Rut</label>
+              <br />
               <input
-                type="submit"
-                value="Create"
-                class="primary-button login-button"
+                type="number"
+                minlength="12"
+                maxlength="12"
+                name="rut"
+                id="rut"
+                value=""
               />
             </div>
-          </form>
-        </fieldset>
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>INICIAR SESIÓN</legend>
+            <div name="iniciarSesion">
+              <label for="contraseña">Contraseña</label>
+              <br />
+              <input
+                type="password"
+                minlength="8"
+                maxlength="12"
+                id="contraseña"
+                value=""
+              />
+              <br />
+              <label for="contraseña2">Vuelva a escribir la contraseña</label>
+              <br />
+              <input
+                type="password"
+                id="contraseña2"
+                minlength="8"
+                maxlength="12"
+                value=""
+              />
+            </div>
+          </fieldset>
+          <br />
+          <fieldset>
+            <legend>CONDICIONES DE REGISTRO</legend>
+            <div name="condicionesRegistro">
+              <label>Deseo recibir notificaciones</label>
+              <br />
+              <input type="radio" name="opcion" id="sip" value="si" />
+              <label for="sip">Si</label>
+              <br />
+              <input type="radio" name="opcion" id="nop" value="no" />
+              <label for="nop">No</label>
+              <br />
+              <input
+                type="checkbox"
+                name="cookies"
+                id="cookies"
+                value="cookies"
+              />
+              <label for="cookies"
+                >Acepto el acuerdo de servicios, la declaracion de privacidad y
+                la declaracion de uso de cookies</label
+              >
+              <br />
+              <div>
+                <p><a href="login.html">¿Ya tienes cuenta?</a></p>
+                <input
+                  type="submit"
+                  value="Create"
+                  class="primary-button login-button"
+                />
+              </div>
+            </div>
+          </fieldset>
+        </form>
       </section>
     </header>
 
