funcionalidad de tipo de formulario mejorada

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -78,17 +78,17 @@
             <input
               type="radio"
               name="TipoFormulario"
-              id="formPersona"
               class="form-check-input"
               value="persona"
+              id="radioPersona"
               checked
             />
-            <label for="TipoFormulario">Cliente</label>
+            <label for="TipoFormulario">Persona</label>
             <input
               type="radio"
               name="TipoFormulario"
-              id="formEmpresa"
               value="empresa"
+              id="radioEmpresa"
             />
             <label for="TipoFormulario">Empresa</label>
           </fieldset>
