--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -64,24 +64,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
-            <img src="assets/viandas/8.jpg" class="d-block w-100" alt="...">
+            <img src="assets/recursos/celiaco/menu 1/menu1_celiacos.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°1</h5>
-              <p>Consta con una viandas de ...</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/viandas/25.jpg" class="d-block w-100" alt="...">
+            <img src="assets/recursos/celiaco/menu2/menu2.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°2</h5>
-              <p>Consta con una viandas de ....</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/viandas/24.jpg" class="d-block w-100" alt="...">
+            <img src="assets/recursos/celiaco/menu3/menu3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Menú n°3</h5>
-              <p>Consta con una viandas de ....</p>
             </div>
           </div>
         </div>
@@ -95,7 +92,45 @@
         </button>
       </div></div>
     </section><br>
-    <section class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores velit, at, reprehenderit voluptate vitae laborum, odit tempora ipsum ab quas excepturi aperiam dolorem molestiae quidem doloremque possimus earum. Adipisci, cum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam laborum distinctio ratione deleniti quia quas obcaecati eos corrupti vero quos! Sed, numquam suscipit assumenda veniam libero reprehenderit eligendi voluptas architecto?</section>
+    
+    <form action="../logica/x.php" method="post">
+      <fieldset>
+        <input
+          type="radio"
+          name="TipoDieta"
+          id="formCeliaco"
+          class="form-check-input"/>
+        <label for="TipoDieta">Celiaco</label>
+        <input type="radio" name="TipoDieta" id="formClasica" />
+        <label for="TipoDieta">Clasico</label>
+        <input type="radio" name="TipoDieta" id="formVegetariano" />
+        <label for="TipoDieta">Vegetariano</label>
+        <input type="radio" name="TipoVegano" id="formVegano" />
+        <label for="TipoDieta">Vegano</label>
+        <input type="radio" name="TipoVegano" id="formMediterraneo" />
+        <label for="TipoDieta">Mediterraneo</label>
+        <input type="radio" name="TipoVegano" id="formCrudivegano" />
+        <label for="TipoDieta">Crudivegano</label>
+        <input type="radio" name="TipoVegano" id="formFlexivegetarianos" />
+        <label for="TipoDieta">Flexivegetarianos</label>
+        <input type="radio" name="TipoVegano" id="formPescetarianos" />
+        <label for="TipoDieta">Pescetarianos</label>
+        <input type="radio" name="TipoVegano" id="formApivegetariano" />
+        <label for="TipoDieta">Apivegetariano</label>
+        <input type="radio" name="TipoVegano" id="formLactovegetarian" />
+        <label for="TipoDieta">Lactovegetariano</label>
+        <input type="radio" name="TipoOvovegetariano" id="formOvovegetariano" />
+        <label for="TipoDieta">Ovovegetariano</label>
+        <input type="radio" name="TipoOvolactovegetariano" id="formOvolactovegetariano" />
+        <label for="TipoDieta">Ovolactovegetariano</label>
+        <input type="radio" name="TipoPostres" id="formPostres" />
+        <label for="TipoDieta">Postres</label>
+
+      </fieldset>
+    </form>
+
+
+    <section class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium ipsum recusandae sunt, corrupti, perspiciatis commodi quo quasi ducimus magni sit doloremque? Nulla ab ut eveniet velit, optio laborum vel. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores velit, at, reprehenderit voluptate vitae laborum, odit tempora ipsum ab quas excepturi aperiam dolorem molestiae quidem doloremque possimus earum. Adipisci, cum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam laborum distinctio ratione deleniti quia quas obcaecati eos corrupti vero quos! Sed, numquam suscipit assumenda veniam libero reprehenderit eligendi voluptas architecto?</section>
 
     <footer>
       <b>Empresa de alimentos SISVIANSA sisviansa@gmail.com 093301602.</b>
