--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -73,7 +73,7 @@
 
       <section>
         <h2>Formulario de registro</h2>
-        <form action="../logica/controladorCliente.php" method="post">
+        <form action="../logica/controladorCliente.php?insert=cliente-persona" method="post">
           <fieldset>
             <input
               type="radio"
