--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -76,6 +76,7 @@
         <form
           action="../logica/controladorCliente.php?insert=cliente-persona"
           method="post"
+          id="formulario"
         >
           <fieldset>
             <input
@@ -103,9 +104,9 @@
               <br />
               <input type="tel" id="tel" minlength="8" maxlength="9" value="" />
               <br />
-              <label for="gmail">Correo Electronico</label>
+              <label for="email">Correo Electronico</label>
               <br />
-              <input type="email" id="gmail" pattern="" value="" />
+              <input type="email" id="email" pattern="" value="" />
               <br />
               <label>Dirección</label><br />
               <input
