--- a/presentacion/emp_viandas.html
+++ b/presentacion/emp_viandas.html
@@ -104,22 +104,28 @@
           /><br />
           <input type="text" id="ingrediente3" value="" placeholder="ingrediente 3" />
         </div>
+        <div>
+          <fieldset class="img">
+            <img src="assets/viandas/2.jpg" class="img">
+          </fieldset>
+        </div>
       </fieldset>
       <br />
       <fieldset id="bloqueAlta">
         <legend>Eliminar Vianda</legend>
         <div>
-          <label for="antes">Antes</label>
+          <label for="id_vianda">ID vianda</label>
           <br />
           <input type="text" maxlength="18" id="antes" value="" />
-          <br />
-          <label for="despues">Despues</label>
-          <br />
-          <input type="text" id="despues" maxlength="18" value="" />
+        </div>
+        <div>
+          <fieldset class="img">
+            <img src="assets/viandas/2.jpg" class="img">
+          </fieldset>
         </div>
       </fieldset>
       <br />
-      <fieldset id="bloqueBaja" style="display: none">
+      <fieldset id="bloqueBaja"> <!--style="display: none"-->
         <legend>Modificar Vianda</legend>
         <div>
             <label for="nom">Nombre</label>
@@ -129,9 +135,15 @@
             <label for="antes">antes</label>
             <br />
             <input type="text" id="ant"  value="" />
+            <br>
             <label for="despues">despues</label>
             <br />
             <input type="text" id="desp"  value="" />
+          </div>
+          <div>
+            <fieldset class="img">
+              <img src="assets/viandas/2.jpg" class="img">
+            </fieldset>
           </div>
         </fieldset>
         <br />
