validando campos vacios

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -102,11 +102,17 @@
             <div>
               <label for="tel">Telefono</label>
               <br />
-              <input type="tel" id="tel" minlength="8" maxlength="9" value="" />
+              <input
+                type="text"
+                id="tel"
+                minlength="8"
+                maxlength="9"
+                value=""
+              />
               <br />
               <label for="email">Correo Electronico</label>
               <br />
-              <input type="email" id="email" pattern="" value="" />
+              <input type="text" id="email" value="" />
               <br />
               <label>Dirección</label><br />
               <input
@@ -202,7 +208,7 @@
               <label>Razon Social</label>
               <br />
               <input
-                type="razon_social"
+                type="text"
                 minlength="1"
                 maxlength="18"
                 name="razon_social"
@@ -213,7 +219,7 @@
               <label for="rut">Rut</label>
               <br />
               <input
-                type="number"
+                type="text"
                 minlength="12"
                 maxlength="12"
                 name="rut"
