--- a/presentacion/emp_viandas.html
+++ b/presentacion/emp_viandas.html
@@ -89,19 +89,12 @@
           <br />
           <input type="text" id="tiempo" pattern="" value="" />
           <br />
-          <label>Composición</label><br />
+          <label>Contenido</label><br />
           <input
-            type="text"
-            id="ingrediente1"
-            value=""
-            placeholder="ingrediente 1"
-          /><br />
+            type="text" id="ingrediente1" value="" placeholder="ingrediente 1"
+          /><br/>
           <input
-            type="text"
-            id="ingrediente2"
-            value=""
-            placeholder="ingrediente 2"
-          /><br />
+            type="text" id="ingrediente2" value="" placeholder="ingrediente 2"/><br />
           <input type="text" id="ingrediente3" value="" placeholder="ingrediente 3" />
         </div>
         <div>
