--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -100,14 +100,15 @@
           <fieldset>
             <legend>Cliente</legend>
             <div>
-              <label for="tel">Telefono</label>
+              <label for="telefono">Telefono</label>
               <br />
               <input
                 type="text"
-                id="tel"
+                id="telefono"
                 minlength="8"
                 maxlength="9"
                 value=""
+                name="telefono"
               />
               <br />
               <label for="email">Correo Electronico</label>
@@ -138,21 +139,21 @@
           <fieldset>
             <legend>INICIAR SESIÓN</legend>
             <div name="iniciarSesion">
-              <label for="contraseña">Contraseña</label>
+              <label for="password">Contraseña</label>
               <br />
               <input
                 type="password"
                 minlength="8"
                 maxlength="12"
-                id="contraseña"
+                id="password"
                 value=""
               />
               <br />
-              <label for="contraseña2">Vuelva a escribir la contraseña</label>
+              <label for="password2">Vuelva a escribir la contraseña</label>
               <br />
               <input
                 type="password"
-                id="contraseña2"
+                id="password2"
                 minlength="8"
                 maxlength="12"
                 value=""
