--- a/presentacion/dietas.html
+++ b/presentacion/dietas.html
@@ -122,5 +122,11 @@
         </fieldset>
 
     </section>
+    <footer>
+      <b>Empresa de alimentos SISVIANSA sisviansa@gmail.com 093301602.</b>
+      <img src="./assets/recursos/isotipo.png" height="55px" width="55">
+      <b>Pagina web creada por Rubber Ahiru &copy;<br>
+      Todos los derechos reservados </b>
+    </footer>
 </body>
 </html>
