--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -44,7 +44,7 @@
         <li class="navbar-email">sisviansa@gmail.com</li>
         <li class="navbar-shopping-cart">
           <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart">
-          <div>2</div>
+          <div>0</div>
         </li>
       </ul>
     </div>
@@ -67,5 +67,12 @@
   <input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******"><br>
   <input class="botons" type="submit" value="Ingresar">
 </section>
+
+<footer>
+  <b>Empresa de alimentos SISVIANSA sisviansa@gmail.com 093301602.</b>
+  <img src="./assets/recursos/isotipo.png" height="55px" width="55">
+  <b>Pagina web creada por Rubber Ahiru &copy;<br>
+  Todos los derechos reservados </b>
+</footer>
 </body>
 </html>
