--- a/presentacion/nosotros.html
+++ b/presentacion/nosotros.html
@@ -42,7 +42,7 @@
                 <p><a href="registro.html">Registrarse</a></p>&nbsp;
                 <li class="navbar-shopping-cart">
                 <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart">
-                <div>2</div>
+                <div>0</div>
               </li>
             </ul>
           </div>
@@ -57,5 +57,12 @@
          </fieldset>
 
     </section>
+
+    <footer>
+      <b>Empresa de alimentos SISVIANSA sisviansa@gmail.com 093301602.</b>
+      <img src="./assets/recursos/isotipo.png" height="55px" width="55">
+      <b>Pagina web creada por Rubber Ahiru &copy;<br>
+      Todos los derechos reservados </b>
+    </footer>
 </body>
 </html>
