--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -255,6 +255,7 @@
               <div>
                 <p><a href="login.html">¿Ya tienes cuenta?</a></p>
                 <input
+                  id="btnSubmit"
                   type="submit"
                   value="Create"
                   class="primary-button login-button"
