--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -26,13 +26,13 @@
           <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="dietas.html">Dieta</a>
+          <a href="emp_dietas.html">Dieta</a>
         </li>
         <li>
-          <a href="viandas.html">Viandas</a>
+          <a href="emp_viandas.html">Viandas</a>
         </li>
         <li>
-          <a href="nuevo.html">Nuevo</a>
+          <a href="emp_nuevo.html">Nuevo</a>
         </li>
         <li>
           <a href="nosotros.html">Nosotros</a>
