--- a/presentacion/nosotros.html
+++ b/presentacion/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style_dietas.css">
+    <link rel="stylesheet" href="assets/css/style_nosotros.css">
     <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png"/>
     <title>Sobre Nosotros</title>
 </head>
@@ -53,6 +53,57 @@
     <section>
  
         <fieldset>
+          <div class="col">
+            <div class="home-contact">
+            <form method="post" class="contact-form clarfix ng-pristine ng-valid ng-scope" ng-submit="vm.contactSubmit()" ng-if="!vm.contactForm.sending && !vm.contactForm.send">
+            <div class="row">
+              <div class="col-1">
+               <legend>Buzon de quejas o recomendaciones:</legend>
+                <div class="form-group">
+              <label>Nombre y Apellido</label>
+              <input type="text" ng-model="vm.contactForm.name" class="form-control input-lg ng-pristine ng-untouched ng-valid ng-empty" placeholder="Ingresé su nombre y apellido" aria-invalid="false">
+              </div>
+                <div class="form-group">
+              <label>Correo Electrónico</label>
+              <input type="text" ng-model="vm.contactForm.name" class="form-control input-lg ng-pristine ng-untouched ng-valid ng-empty" placeholder="Ingresé su correo electrónico" aria-invalid="false">
+              </div>
+                <div class="form-group">
+              <label>Teléfono</label>
+              <input type="text" ng-model="vm.contactForm.name" class="form-control input-lg ng-pristine ng-untouched ng-valid ng-empty" placeholder="Ingresé su teléfono" aria-invalid="false">
+              </div>
+              </div>
+              <div class="col-2">
+                <div class="form-group">
+                <label>Mensaje</label>
+                <textarea cols="6" rows="8" ng-model="vm.contactForm.message" class="form-control ol input-lg ng-pristine ng-untouched ng-valid ng-empty" placeholder="Comentarios" aria-invalid="false"></textarea>
+                </div>
+              </div>
+              ::after
+              </div>
+              <div class="row">
+               <div class="col-2">
+                 <h3>Atención al cliente</h3>
+                 <p>
+                <i class="fa fa-envelope">::before</i>
+                "sisviansa@gmail.com"<br>
+                <i class="fa fa-phone">::before</i>
+                "26225497"
+                 </p>
+                 <p>
+                 <span>Horario de atención telefónica: Lunes a viernes de 9 a 18hs</span>
+                 </p>
+                 </div>
+            
+              <div class="col-1">
+              <input type="hidden" ng-model="vm.contactForm.type" ng-init="vm.contactForm.type ='contact'" class="ng-pristine ng-untouched ng-valid ng-not-empty" aria-invalid="false">
+              <input type="submit" class="btn btn-lg pull-right" value="Enviar mensaje">
+              </div>
+              ::after
+              </div>
+              ::after
+            </form>
+            </div>
+            </div>
 
          </fieldset>
 
