columna para viandas.html

--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -49,7 +49,26 @@
         </nav>
         <br>
     </header>
-
+    <div class="colum">
+      <h1>Ordenar por dieta</h1>
+      <hr>
+      <input type="checkbox" /> <label>clasicos</label><br>
+      <input type="checkbox" /> <label>mediterranea</label><br>
+      <input type="checkbox" /> <label>celiacos</label><br>
+      <input type="checkbox" /> <label>sin-carboidratos</label><br>
+      <input type="checkbox" /> <label>sin-sal</label><br>
+      <input type="checkbox" /> <label>vegetariana</label><br>
+      <input type="checkbox" /> <label>veganos</label><br>
+      <input type="checkbox" /> <label>crudiveganos</label><br>
+      <input type="checkbox" /> <label>flexivegetariana</label><br>
+      <input type="checkbox" /> <label>pescetariana</label><br>
+      <input type="checkbox" /> <label>apivegetariana</label><br>
+      <input type="checkbox" /> <label>lactovegetariana</label><br>
+      <input type="checkbox" /> <label>ovovegetariana</label><br>
+      <input type="checkbox" /> <label>ovolactovegetariana</label><br><br>
+      <input class="botons" type="submit" value="Buscar">
+    </div>
+    
     <section>
     <h2>Listado de Viandas</h2>
       <fieldset>
@@ -80,9 +99,9 @@
           <label for="id_vianda">cosas</label>
           <br />
           <input type="text" id="2" value="" />
+          <input class="botons" type="submit" value="Agregar al carrito">
         </div>
        </fieldset>
-      <input class="botons" type="submit" value="Agregar al carrito">
       
       <br />
       <fieldset>
@@ -96,9 +115,9 @@
             <label for="nom">cosas</label>
             <br />
             <input type="text"  id="3" value="" />
+            <input class="botons" type="submit" value="Agregar al carrito">
         </div>
       </fieldset>
-      <input class="botons" type="submit" value="Agregar al carrito">
   
       <br />
       <fieldset>
@@ -126,6 +145,7 @@
             <label for="nom">cosas</label>
             <br />
             <input type="text"  id="5" value="" />
+            <input class="botons" type="submit" value="Agregar al carrito">
         </div>
       </fieldset> 
 </section>
