cambio de nombre

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -78,6 +78,7 @@
           method="post"
           id="formulario"
         >
+          <input type="hidden" name="insert" value="cliente-persona" />
           <fieldset>
             <input
               type="radio"
@@ -257,7 +258,7 @@
                 <input
                   id="btnSubmit"
                   type="submit"
-                  value="Create"
+                  value="Enviar"
                   class="primary-button login-button"
                 />
               </div>
