insert cliente js

--- a/presentacion/registro.html
+++ b/presentacion/registro.html
@@ -78,7 +78,12 @@
           method="post"
           id="formulario"
         >
-          <input type="hidden" name="insert" value="cliente-persona" />
+          <input
+            type="hidden"
+            name="insert"
+            id="insertCliente"
+            value="cliente-persona"
+          />
           <fieldset>
             <input
               type="radio"
