--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -59,18 +59,18 @@
         <div class="pop-up">
           <div class="pop-up-wrap">
               <div class="pop-up-title">
-                  <h2>CODYTRON</h2>
+                  <h2> Sisviansa </h2>
                   <p>Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="subcription">
                   <div class="line"></div>
                   <i class="far fa-times-circle" id="close"></i>
                   <div class="sub-content">
-                      <h2>SUSCRIBETE</h2>
+                      <h2>Su pedido:</h2>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                       <form>
                           <input type="email" class="subs-email" placeholder="Esccribe tu correo electronico">
-                          <button class="subs-send" type="submit">Enviar Suscripcion</button>
+                          <button class="subs-send" type="submit">Enviar</button>
                           <a href="#"><img src="img/icons8-play-button.svg" alt=""></a>
                           <a href="#"><img src="img/icons8-facebook.svg" alt=""></a>
                           <a href="#"><img src="img/icons8-instagram.svg" alt=""></a>
@@ -79,7 +79,7 @@
                   
                   <div class="line"></div>
               </div>
-          </div>
+          </div></div>
     </header>
 
     <section>
