--- a/presentacion/login.html
+++ b/presentacion/login.html
@@ -26,7 +26,7 @@
           <a href="index.html">Inicio</a>
         </li>
         <li>
-          <a href="emp_dietas.html">Dieta</a>
+          <a href="dietas.html">Dieta</a>
         </li>
         <li>
           <a href="emp_viandas.html">Viandas</a>
