--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -8,6 +8,8 @@
     <script src="js/main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/cd33816f91.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png"/>
 
     <title>Sisviansa</title>
@@ -50,7 +52,6 @@
                 <li class="navbar-shopping-cart">
                 <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
                 <button type="button" class="btn-abrir"> <img img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart" /></button>
-                <!--<img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart">-->
                 <div>2</div>
               </li>
             </ul>
