--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -52,7 +52,7 @@
                 <li class="navbar-shopping-cart">
                 <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
                 <button type="button" class="btn-abrir"> <img img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart" /></button>
-                <div>2</div>
+                <div>+</div>
               </li>
             </ul>
           </div>
@@ -61,20 +61,20 @@
           <div class="pop-up-wrap">
               <div class="pop-up-title">
                   <h2> Sisviansa </h2>
-                  <p>Lorem ipsum dolor sit amet.</p>
+                  <p>Sistema de viandas saludables.</p>
+                  <!--<a href="#"><img src="assets/icons/icons-play-button.svg" alt=""></a>-->
+                  <a href="#"><img src="assets/icons/icons-facebook.svg" alt=""></a>
+                  <a href="#"><img src="assets/icons/icons-instagram.svg" alt=""></a>
               </div>
               <div class="subcription">
                   <div class="line"></div>
-                  <i class="far fa-times-circle" id="close"></i>
+                  <i class="far fa-times-circle" id="close">[x]</i>
                   <div class="sub-content">
                       <h2>Su pedido:</h2>
                       <p>Lorem ipsum dolor sit amet consectetur.</p>
                       <form>
-                          <input type="email" class="subs-email" placeholder="Esccribe tu correo electronico">
+                          <input type="text" class="subs-cosas" placeholder="Agregar cosas">
                           <button class="subs-send" type="submit">Enviar</button>
-                          <a href="#"><img src="img/icons8-play-button.svg" alt=""></a>
-                          <a href="#"><img src="img/icons8-facebook.svg" alt=""></a>
-                          <a href="#"><img src="img/icons8-instagram.svg" alt=""></a>
                       </form>
                   </div>
                   
