--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/style_viandas.css">
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/mostrar-viandas.js"></script>
     <link rel="icon" sizes="16x16 32x32 48x48" type="imagen/png" href="assets/recursos/logo_sisviansa.png"/>
     <title>Viandas</title>
 </head>
