--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -41,9 +41,10 @@
               <li>
                 <a href="nosotros.html">Nosotros</a>
               </li>
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              
+              </ul>
+            </div>
               <!--login-->
+              <div class="navbar-right"><ul>
               <li><input class="control" type="email" name="usuario" id="usuario" placeholder="abc@example.com"></li>&nbsp;
                 <li><input class="control" type="password" name="contrasenia" id="contrasenia" placeholder="*******"></li>&nbsp;
                 <li><input class="botons" type="submit" value="Ingresar"></li>&nbsp;
@@ -52,7 +53,7 @@
                 <li class="navbar-shopping-cart">
                 <!--<button type="image" class="btn-abrir" img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart"></button>-->
                 <button type="button" class="btn-abrir"> <img img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart" /></button>
-                <div>+</div>
+                <div>0</div>
               </li>
             </ul>
           </div>
