2 columnas iguales en viandas

--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -139,7 +139,7 @@
 
     <section>
       <h2>Listado de Viandas</h2>
-      <div id="viandas"></div>
+      <div id="viandas" class="grid-contenedor"></div>
       <br />
     </section>
 
