--- a/presentacion/viandas.html
+++ b/presentacion/viandas.html
@@ -136,12 +136,12 @@
       <input type="checkbox" /> <label>ovolactovegetariana</label><br /><br />
       <input class="botons" type="submit" value="Buscar" />
     </div>
-
+    
     <section>
       <h2>Listado de Viandas</h2>
       <div id="viandas" class="grid-contenedor"></div>
+      <button id="ver-mas" class="botons">Ver mas</button>
       <br />
-      <button id="ver-mas">Ver mas</button>
     </section>
 
     <footer>
